RESOLVED FIXED275157
[GStreamer][WebRTC] Missing a=msid in offer after setting codec preferences
https://bugs.webkit.org/show_bug.cgi?id=275157
Summary [GStreamer][WebRTC] Missing a=msid in offer after setting codec preferences
Carlos Bentzen
Reported 2024-06-05 07:02:21 PDT
This test fails: let pc = new RTCPeerConnection(); let stream = await navigator.mediaDevices.getUserMedia({ video: true }); let track = stream.getVideoTracks()[0]; pc.addTrack(track, stream); pc.getTransceivers()[0].setCodecPreferences([{mimeType: "video/VP8", clockRate: 90000}]); let offer = await pc.createOffer(); assert_true(offer.sdp.includes(`a=msid:${stream.id} ${track.id}`), 'offer SDP includes a=msid line');
Attachments
Carlos Bentzen
Comment 1 2024-06-05 07:35:51 PDT
EWS
Comment 2 2024-06-05 10:35:04 PDT
Committed 279746@main (6d7fa27729b7): <https://commits.webkit.org/279746@main> Reviewed commits have been landed. Closing PR #29542 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-05 10:36:15 PDT
Note You need to log in before you can comment on or make changes to this bug.